Reverse detects mobile and switches to column-reverse direction

--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -118,6 +118,11 @@
 
             $sf-fbg-flex-direction: column-reverse !global;
         }
+
+        @if ($from-breakpoint == zero) {
+
+            $sf-fbg-flex-direction: column-reverse !global;
+        }
     }
 
     @if ($use-equal-heights == true) {
